# rust-opendingux-test

./: .gitattributes  .gitignore  Cargo.toml  Notes.md  Readme.md  Xargo.toml  mipsel-gcw0-linux-uclibc.json
.cargo/: config
gcw0-stubs/: libgcw0-stubs.c
package/: debug.all.desktop  noterm.all.desktop  release.all.desktop
rust-opendingux-test/: Cargo.toml
rust-opendingux-test/src/: main.rs
scripts/: deploy.cmd  deploy.sh  install-gcw0.sh  install-targets.sh  package.sh
