# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name                    = "rust-opendingux-test"
version                 = "0.1.0"
authors                 = ["MaulingMonkey <git@maulingmonkey.com>"]
edition                 = "2018"
publish                 = false

[dependencies]
gl                      = "0.14"

[target.'cfg(target_vendor = "gcw0")'.dependencies]
egli                    = "0.5.0"

[target.'cfg(not(target_vendor = "gcw0"))'.dependencies]
glutin                  = "0.30"
glutin-winit            = "0.3"
raw-window-handle       = "0.5"
winit                   = "0.28"
